fixed gap

--- a/css/main.scss
+++ b/css/main.scss
@@ -359,10 +359,6 @@ span {
   text-decoration: none;
   color: rgb(247,247,247);
 }
-.outro-container{
-  line-height: 20 
-}
-
 
 .contact-layout {
   margin-left: 100px;
@@ -910,6 +906,12 @@ textarea {
       min-height: 80%;
       height:80%;
     }
+    .about{
+      padding-left: 7vw;
+    }
+    .about-skills{
+      line-height: 2vw;
+    }
     .contact-visit{
       font-size: 1vw;
       margin-top: -2vw;
@@ -920,9 +922,16 @@ textarea {
     .contact{
       min-height:30%;
       height:30%;
+      padding-left: 7vw;
     }
     .end-footer{
       font-size: 1vw;
+    }
+    .outro-text{
+      line-height:2vw;
+    }
+    .outro{
+      height: 15%;
     }
   }
 
